[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/enhanced_panel_test.gd" id="1"]
[ext_resource type="Script" path="res://ui/panels/EnhancedInformationPanel.gd" id="2"]

[node name="EnhancedPanelTest" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.1, 1)

[node name="EnhancedInfoPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -420.0
offset_top = -300.0
offset_right = -20.0
offset_bottom = 300.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("2")

[node name="TestButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = 180.0
offset_bottom = -20.0
text = "Test Enhanced Panel"

[connection signal="pressed" from="TestButton" to="." method="_on_test_button_pressed"]